FILES/style.css
/* ... */
TR.tablefilter INPUT { width: 10em ; }


TR.ok TD, #current_input.ok, SPAN.ok {  }
BODY TABLE.colored TR.non TD, #current_input.non, SPAN.non, LI.non { background-color: #FBB; }

TR.column_title TH { color: #00F; }
TR.column_title TH.ro { color: #88F; }
TR.column_title DIV { position: relative; width:100% }
TR.column_title DIV SPAN { float: left; width:100% }
TR.column_title DIV IMG { position: absolute; right: 0px; top: 0px }


TR.ro, TD.ro, #current_input.ro, TH.ro, TH.ro INPUT, TH.ro SELECT, .ro { 
  color: #555 ;
}
TD.empty { 
 /* background-color: #DDD ; */
}

BODY TABLE.colored TR.highlight_current TD { color: #00A;  }


.is_an_abj, .is_not_an_abj { text-decoration: underline ; }
.is_not_an_abi, .ro.is_not_an_abi, .greentext.is_not_an_abi { color: #F00 ; }

TABLE#thetable TD.number, TD.number, #current_input.number { 
  text-align: right ;
}

BODY TABLE.colored TR TD.color_green.color_red, #current_input.color_green.color_red, .color_green.color_red { 
  background-color: #FC0 ;
}

BODY TABLE.colored TR TD.color_red, #current_input.color_red, .color_red { 
  background-color: #F88 ;
}

BODY TABLE.colored TR TD.color_green, #current_input.color_green, .color_green { 
  background-color: #8F8 ;
}

.greentext.redtext { color: #D60 ; }
.redtext   { color: #A00 ; }
.greentext { color: #0A0 ; }




BODY TABLE.colored TR TD.filtered, #current_input.filtered, BODY TABLE.colored TR.non TD.filtered, BODY TABLE.colored TR.tierstemps TD.filtered, SPAN.filtered { 
  background-color: #FF0 ;
}


TABLE#thetable TH.sorted { 
  font-weight: bold ;
}

TR.column_title DIV {
    position: relative ;
}

TR.column_title DIV DIV { /* Sorting triangle */
    position: absolute ;
    right: 0px ;
    width: auto ;
    height: 1.2em ; /* Bad height on Chrome on Windows */
}

TR.column_title DIV:hover DIV.icon_hidden {
    display: block ;
    color: #888 ;
}

TR.column_title DIV.icon_hidden {
    display: none ;
}

TABLE#thetable TH.hidden_to_student, SPAN.hidden_to_student {
  color: #B83 ;
}

TABLE#thetable TH.modifiable_by_student, SPAN.modifiable_by_student {
  color: #F55 ;
}

IMG.server { 
  width: 7px ;
  height: 7px ;
  background-color: orange ;
  border: 0px ;
}

INPUT#comment {
  border: 1px solid black ;
  background-color: white ;
}

TABLE INPUT, TABLE SELECT { 
  width: 100% ;
}

DIV.tipped, DIV.tipped DIV.text { display: inline ; }

DIV.tipped DIV.help { display: none; }

DIV#tip DIV.more { 
  white-space: normal;
  font-weight: bold;
  background-color: inherit ;
  border-top: 1px solid black ;
}

DIV#tip { 
  position: absolute ;
  border: 1px solid black ;
  background-image: url(tip.png) ;
  display: none ;
  padding: 2px ;
  min-width: 10em;
  z-index: 20;
  font-size: 70%;
}

DIV#tip_plus {
  position: absolute ;
  border: 1px solid black ;
  background: #FFF ;
  z-index: 20;
  opacity: 0.6;
}

DIV#tip_plus:hover {
  background: #AFF ;
}

DIV.help > * { font-size: 80%; }

DIV#tip HR {
   width: 20em ; /* Needed for IE, else it is the full screen width */
}

DIV#tip SPAN.title { background-color: #CCF ; }

.cursor IMG {
  vertical-align: middle ;
  border: 0px ;
}

DIV#tip UL, DIV#tip P { margin: 0px ; }

DIV.shortcuts {
    background-color: #888 ;
    }
DIV.shortcuts TD {
    background-color: #EEE
    }
DIV.shortcuts TD.key {
    text-align: center ;
    }
DIV.shortcuts TD.modifier {
    text-align:right
    }


IMG.photo { 
  width: 100px ;
}

TD.comment, .comment { 
  background: url('cell_comment.png');
  background-repeat:no-repeat;
  background-position:right top;
}

TD.comment, #current_input.comment { 
  background-color: white;
}

TD.today, #current_input.today, .today { 
  font-weight: bolder ;
}

TD.default { color: #BBB;
	     position: relative ; /* Needed for cell merging */
	   }


SPAN#teachers { font-weight: bold ; }

#student_data { border: 0px ; width: 1px ; height: 1px ; }


.t7, .t8 { display: none ; }

.copyright {
  color: #AAA ;
}

TABLE.tablehelp { border: none; }
TABLE.tablehelp TR TH { text-align: right; background-color: #EEEEEE; }


IMG.icone { height: 16px; border: none;   vertical-align: bottom ;
 }
IMG.bigicone { width: 100px; border: none; }

.stroked { background-color: #BFB; font-weight: bold }

#menutop A.linkstroked { text-decoration: line-through }


#authenticate { 
  display: none ;
  position: absolute;
  left: 10%;
  width: 80% ;
  top: 10%;
  height: 80% ;
  border: 4px solid red ;
  background-color: white ;
  z-index: 300 ;
}

DIV#horizontal_scrollbar { 
  font-size: 60% ;
  height: 2em ;
  display: inline;
  padding-bottom: 6px ;
}

DIV.horizontal_scrollbar { 
  margin-bottom: 1em ;
}
DIV.horizontal_scrollbar IMG { 
position: absolute;
 }

DIV#horizontal_scrollbar A { 
  border-top: 1px solid black ;
  border-left: 1px solid #AAA ;
  border-bottom: 1px solid black ;
  position: absolute ;
  text-decoration: none;
  margin: 0px ;
  padding: 0px ;
  overflow: hidden;
  white-space: nowrap;
}
DIV#horizontal_scrollbar A.column_invisible { 
  background-color: #CCC;
}

DIV#horizontal_scrollbar A.column_visible { 
  background-color: #FFF;
}

DIV#horizontal_scrollbar A.cursor { 
  background-color: #0F0;
}

DIV#horizontal_scrollbar A.sorted { 
  color: #080;
}

DIV#vertical_scrollbar { 
  font-size: 70% ;
  width: 1.5em ;
  border: 1px solid black ;
  background-color: #CCC;
  position: absolute;
  overflow: hidden;
}
DIV#vertical_scrollbar SPAN { position: absolute ; left: 1px; }
DIV#vertical_scrollbar SPAN.position {
  left: 0px ;
  right:0px ;
  background-color: #FFF ;
  width: 100% ; /* For IE */
}
DIV#vertical_scrollbar SPAN B.letter {
   color: #00F ;
}
DIV#vertical_scrollbar SPAN B.hide {
  color: #AAA ;
}
DIV#vertical_scrollbar SPAN.cursor {
  position: absolute ;
  background-color: #0F0 ;
  height: 0px ;
}

DIV#vertical_scrollbar IMG { position: absolute ; }


#feedback {
  position:absolute ;
  left: 45% ;
  top: 45% ;
  z-index: 2;
}

P.da {  background-color: #FF0 ; }

/* Tiers temps */


P.tierstemps { background-color: #BBF ; }
/* ... */

